# office-assistant

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
config/: app.config.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  db.rs  main.rs  models.rs  state.rs
src-tauri/src/repositories/: backup.rs  cad.rs  hermes.rs  mod.rs  node_jobs.rs  nodes.rs  projects.rs
src/components/: AppShell.tsx  BackupPanel.tsx  CadDocumentForm.tsx  CadDocumentTable.tsx  EmptyState.tsx  HermesResultPanel.tsx  HermesTaskPanel.tsx  NodeEntryTable.tsx  NodeImportForm.tsx  NodeMonthlyJobPanel.tsx  NodeQualityTable.tsx  NodeReportExportPanel.tsx  NodeReportHistoryPanel.tsx  NodeTestResultTable.tsx  NodeTestRunTable.tsx  PageHeader.tsx  ProjectForm.tsx  ProjectTable.tsx  QuotationItemsEditor.tsx  StatCard.tsx
src/pages/: CadWorkbenchPage.tsx  DashboardPage.tsx  NodeWorkbenchPage.tsx  NotFoundPage.tsx  ProjectCreatePage.tsx  ProjectDetailPage.tsx  ProjectEditPage.tsx  ProjectListPage.tsx
src/services/: backendClient.ts  cadService.ts  configService.ts  exportService.ts  hermesService.ts  nodeService.ts  projectService.ts
src/store/: ProjectStore.tsx
src/styles/: global.css
src/types/: app.ts  cad.ts  hermes.ts  node.ts  stages.ts
src/utils/: date.ts  errors.ts  file.ts  money.ts  projectForm.ts
