[package]
name = "smart-home-office-assistant"
version = "0.1.0"
description = "smart-home-office-assistant"
authors = ["Codex Assistant"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
uuid = { version = "1", features = ["v4", "serde"] }

